--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Instagram Clone</string>
     <string name="action_settings">Settings</string>
+    <string name="home_view_action_settings">Log Out</string>
 
     <string name="parse_app_id">YOUR_APPLICATION_ID</string>
     <string name="parse_client_key">YOUR_CLIENT_KEY</string>
@@ -11,10 +12,10 @@
     <string name="instagramLogoImageView">Instagram Logo</string>
     <string name="userNameLoginEditText">Enter your username&#8230;</string>
     <string name="userPasswordLoginEditText">Enter your password&#8230;</string>
+    <string name="userEmailLoginEditText">Enter your email&#8230;</string>
     <string name="signUpButton">Sign Up</string>
     <string name="changeSignUpTextView">or, Login</string>
-
-
+    <string name="title_activity_home_view">Home View</string>
 
 
 </resources>
