--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Instagram Clone</string>
     <string name="action_settings">Settings</string>
     <string name="home_view_action_settings">Log Out</string>
+    <string name="share_view_action_settings">Share</string>
 
     <string name="parse_app_id">YOUR_APPLICATION_ID</string>
     <string name="parse_client_key">YOUR_CLIENT_KEY</string>
